@@ -40,6 +40,10 @@
 * Support for new URL shortening services.
   You can use `migre.me' as URL shortening service by the following.
   (setq twittering-tinyurl-service 'migre.me) ;; for mig.re
+* Support for retweeted_to_user timeline.
+  ":retweeted_to_user/USER" is added as a new timeline spec. It
+  consists of retweets that will be sent to the home timeline of the
+  user.
 
 ### Bug fixes
 * Fix of displaying a message of authorization.
